--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,8 @@
 {
-  "extends": "airbnb",
   "parser": "babel-eslint",
   "env": {
     "browser": true
   },
-  "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension": [
       2,
@@ -16,5 +14,7 @@
     "react/require-default-props": [0],
     "global-require": [0],
     "semi": [2, "never"]
-  }
+  },
+  "extends": ["airbnb", "prettier", "prettier/react"],
+  "plugins": ["react", "prettier"]
 }
