--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "babel-eslint": "^8.0.2",
     "eslint": "^5.0.1",
     "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.5.1",
-    "prettier": "^1.5.3",
+    "prettier": "^1.16.4",
     "prettier-eslint": "^8.2.2",
     "react-native-scripts": "1.14.0"
   },
@@ -37,5 +40,11 @@
     "react-redux": "^5.0.4",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.1"
+  },
+  "prettier": {
+    "jsxBracketSameLine": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "semi": false
   }
 }
