--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-navigation": "^2.5.5",
     "react-redux": "^5.0.4",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.1"
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "prettier": {
     "jsxBracketSameLine": true,
