--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "react": "16.3.1",
     "react-native": "^0.55.0",
     "react-native-dropdownalert": "^3.1.2",
-    "react-native-extended-stylesheet": "^0.8.0",
     "react-navigation": "^2.5.5",
     "react-redux": "^5.0.4",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3"
   },
   "prettier": {
     "jsxBracketSameLine": true,
