--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prop-types": "^15.5.10",
     "react": "16.3.1",
     "react-native": "^0.55.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dropdownalert": "^3.1.2",
     "react-navigation": "^2.5.5",
     "react-redux": "^5.0.4",
